--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ twitter_username: #gaohaoyang126
 facebook_username: #gaohaoyang.water
 github_username:  ixneo
 email: 932154199@qq.com
-weibo_username: coolinear
-zhihu_username: te-si-la-48-5
+# weibo_username: coolinear
+# zhihu_username: te-si-la-48-5
 linkedIn_username: 
 dribbble_username:
 
